<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.serli.myhealthpartnerdevelopper.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/number_picker_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minute_picker"
            android:layout_weight="1" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_picker"
            android:layout_weight="1" />
    </LinearLayout>

    <Spinner
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_start_stop"
        android:layout_centerHorizontal="true"
        android:id="@+id/activity_spinner" />

    <Button
        android:text="@string/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_start_stop" />

    <RelativeLayout
        android:id="@+id/data_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/number_picker_layout"
        android:layout_above="@+id/activity_spinner">

        <ListView
            android:id="@+id/data_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/button_update" />

        <Button
            android:text="@string/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_clear"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/button_update" />
    </RelativeLayout>

</RelativeLayout>
