<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.serli.myhealthpartnerdevelopper.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <TextView
        android:text="@string/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_weight"
        android:gravity="left"
        android:padding="15dp"
        android:paddingTop="5dp"
        android:layout_below="@+id/textView_height"
        android:layout_alignRight="@+id/textView_height" />

    <TextView
        android:text="@string/text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_height"
        android:padding="15dp"
        android:gravity="left"
        android:paddingTop="10dp"
        android:layout_below="@+id/textView_gender"
        android:layout_alignStart="@+id/textView_gender" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_gender"
        android:gravity="left"
        android:padding="15dp"
        android:paddingTop="10dp"
        android:layout_above="@+id/textView_height"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView_gender"
        android:layout_toEndOf="@+id/textView_gender" />

    <TextView
        android:text="@string/text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_gender"
        android:gravity="left"
        android:elevation="1dp"
        android:padding="15dp"
        android:layout_marginTop="42dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/hint_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_above="@+id/textView_weight"
        android:id="@+id/editText_height"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView_weight" />

    <EditText
        android:hint="@string/hint_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_weight"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView_weight"
        android:layout_alignBottom="@+id/textView_weight" />

    <TextView
        android:text="@string/text_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_birthday"
        android:gravity="left"
        android:padding="15dp"
        android:paddingTop="5dp"
        android:maxWidth="100dp"
        android:layout_alignBottom="@+id/datePicker_birthday"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="66dp" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker_birthday"
        style="@android:style/Widget.DatePicker"
        android:layout_marginEnd="19dp"
        android:layout_below="@+id/editText_weight"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp" />

    <Button
        android:text="Validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_validate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
